--- a/todo
+++ b/todo
@@ -7,16 +7,18 @@ JS:
 Сортировка, не изменяющая позицию Stack'ов
 
 HTML:
-Sidebar на экран Sort / Edit / Demo
+  // Sidebar на экран Sort / Edit / Demo
 Ссылка в книге на каталог ИРБИС'а
 
 CSS:
 Корректное сжатие Cover'a
- // Цвет border'a на date-picker'e
- // Стили border в category-picker'e
 Ширина vue-image-picker'a на экране Info
 Сжимание Sidebar'a при изменении ширины окна
 
 Talk:
 Информация об издании для создателей
 Информация об издании для пользователей
+
+Presa:
+Информация о пользовательском интерфейсе
+Информация об интерфейсе создателя выставок
