--- a/todo
+++ b/todo
@@ -19,6 +19,10 @@ Talk:
 Информация об издании для создателей
 Информация об издании для пользователей
 
-Presa:
-Информация о пользовательском интерфейсе
-Информация об интерфейсе создателя выставок
+
+Try/Catch
+Авторизация mongodb
+Доменные имена
+Конфиг файлы и описание
+Экспорт базы
+Деплой
