--- a/todo
+++ b/todo
@@ -20,9 +20,8 @@ Talk:
 Информация об издании для пользователей
 
 
-Try/Catch
-Авторизация mongodb
-Доменные имена
-Конфиг файлы и описание
-Экспорт базы
-Деплой
+D Try/Catch
+D Авторизация mongodb
+D N Конфиг файлы и описание
+D Экспорт базы
+N Деплой
